RESOLVED FIXED305383
AX: Voice Control: "Select WebKit" on webkit.org causes the web process to hang.
https://bugs.webkit.org/show_bug.cgi?id=305383
Summary AX: Voice Control: "Select WebKit" on webkit.org causes the web process to hang.
Samar Sunkaria
Reported 2026-01-13 05:43:46 PST
With Voice Control enabled, if you visit webkit.org and say "Select WebKit" (when scrolled to the top of the page), the web process hangs (enters an infinite loop while attempting to walk the tree). I can reproduce it reliably with Safari 26.0 and also a trunk build of WebKit. Steps: - Enable Voice Control - Visit webkit.org - Ensure you are scrolled to the top of the page. - Say "Select WebKit". - Notice the page hangs.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-13 05:43:51 PST
Tyler Wilcock
Comment 2 2026-01-14 16:26:29 PST
EWS
Comment 3 2026-01-15 13:43:31 PST
Committed 305668@main (486ac0f1922b): <https://commits.webkit.org/305668@main> Reviewed commits have been landed. Closing PR #56597 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.