Cherry-pick 486ac0f1922b. rdar://168364189

AX: Voice Control: "Select WebKit" on webkit.org causes the web process to hang.
    https://bugs.webkit.org/show_bug.cgi?id=305383
    rdar://168061323

    Reviewed by Joshua Hoffman.

    Prior to this commit, it was possible that AccessibilityObject::findTextRanges could loop infinitely when
    rangeOfStringClosestToRangeInDirection returned the same range it was given.

    This commit makes that function more resilient such that if we get back the same range, we slide the range forwards or
    backwards and try again to make progress.

    Test: accessibility/mac/search-text-with-image-hang.html

    * LayoutTests/accessibility-isolated-tree/TestExpectations:
    New test fails due to some pre-existing bug in how we handle AccessibilityUIElement::searchTextWithCriteria off the main-thread.
    * LayoutTests/accessibility/mac/search-text-with-image-hang-expected.txt: Added.
    * LayoutTests/accessibility/mac/search-text-with-image-hang.html: Added.
    * Source/WebCore/accessibility/AXCoreObject.h:
    (WebCore::AccessibilitySearchTextCriteria::debugDescription const):
    * Source/WebCore/accessibility/AccessibilityObject.cpp:
    (WebCore::AccessibilityObject::rangeOfStringClosestToRangeInDirection const):
    (WebCore::AccessibilityObject::findTextRange const):
    (WebCore::AccessibilityObject::findTextRanges const):

    Canonical link: https://commits.webkit.org/305668@main

Identifier: 305413.69@safari-7624-branch